add correct distname to dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -19,11 +19,11 @@ allow_dirty = Changes
 
 [MetaJSON]
 [MetaResources]
-bugtracker.web  = http://github.com/mcmillhj/%{dist}/issues
-repository.url  = git://github.com/mcmillhj/%{dist}.git
-repository.web  = http://github.com/mcmillhj/%{dist}
+bugtracker.web  = http://github.com/mcmillhj/App-FileDedup/issues
+repository.url  = git://github.com/mcmillhj/App-FileDedup.git
+repository.web  = http://github.com/mcmillhj/App-FileDedup
 repository.type = git
-homepage        = https://metacpan.org/release/%{dist}
+homepage        = https://metacpan.org/release/App-FileDedup
 
 [ReadmeFromPod]
 [ReadmeAnyFromPod]
